Fix misalignment of Expert name in mobile navigation

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -6,3 +6,15 @@
     background-color : #FFE11A;
     box-shadow       : 0 0 5px #FFE11A;
 }
+
+.nav > li > p {
+    margin: 0;
+    padding: 10px 15px;
+}
+
+
+@media screen and (min-width:768px) {
+    .nav > li > p {
+        padding: 15px;
+    }
+}
